# lightcurves

./: .gitignore  .pre-commit-config.yaml  HOP.py  HopFinder.py  LC.py  LC_Set.py  LICENSE.txt  MLC.py  README.md  environment.yml  illustration_lightcurve.ipynb  lc.npy  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
.ipynb_checkpoints/: illustration_lightcurve-checkpoint.ipynb
src/lightcurves/: HOP.py  HopFinder.py  LC.py  __init__.py  _version.py  hop.py  hop_finder.py  lc.py  lc_set.py  version.py
tests/: test_basics.py
